# Rectangle_Packing_Analyzer

./: .gitignore  README.md  pyproject.toml
src/: analyzer.py  models.py  rectangle_analyzer.py  test_rectangles.py
tests/: test_rectangles.py
